--- a/index.html
+++ b/index.html
@@ -649,22 +649,16 @@
             <p style="margin-top: 10px;">CICD</p>
           </div><!-- End Service Item -->
 
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon flex-shrink-0"><i class="bi bi-bar-chart"></i></div>
-            <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Sed ut perspiciatis</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur</p>
-            </div>
+          <div class="col-lg-4 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+            data-aos-delay="100">
+            <img src="images/docker.png" alt="Docker Logo" style="width: 100px; height: 100px;">
+            <p style="margin-top: 10px;">Docker</p>
           </div><!-- End Service Item -->
 
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon flex-shrink-0"><i class="bi bi-binoculars"></i></div>
-            <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                mollit anim id est laborum</p>
-            </div>
+         <div class="col-lg-4 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+            data-aos-delay="100">
+            <img src="images/github.png" alt="GitHub Logo" style="width: 100px; height: 100px;">
+            <p style="margin-top: 10px;">GitHub</p>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
