--- a/index.html
+++ b/index.html
@@ -689,7 +689,16 @@
             data-aos-delay="100">
             <img src="images/selenium.png" alt="selenium Logo" style="width: 100px; height: 100px;">
             <p style="margin-top: 10px;">Selenium</p>
-
+        </div>
+        <div class="col-lg-4 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+            data-aos-delay="100">
+            <img src="images/aws.png" alt="aws Logo" style="width: 100px; height: 100px;">
+            <p style="margin-top: 10px;">Amazon Web Services</p>
+        </div>
+         <div class="col-lg-4 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+            data-aos-delay="100">
+            <img src="images/git.png" alt="git Logo" style="width: 100px; height: 100px;">
+            <p style="margin-top: 10px;">GIT</p>
         </div>
 
       </div>
