--- a/index.html
+++ b/index.html
@@ -700,6 +700,16 @@
             <img src="images/git.png" alt="git Logo" style="width: 100px; height: 100px;">
             <p style="margin-top: 10px;">GIT</p>
         </div>
+        <div class="col-lg-2 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+            data-aos-delay="100">
+            <img src="images/java.png" alt="java Logo" style="width: 100px; height: 100px;">
+            <p style="margin-top: 10px;">JAVA</p>
+        </div>
+        <div class="col-lg-2 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+            data-aos-delay="100">
+            <img src="images/pytest.png" alt="pytest Logo" style="width: 100px; height: 100px;">
+            <p style="margin-top: 10px;">pytest</p>
+        </div>
 
       </div>
 
