--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
-        <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
+        <li><a href="#portfolio"><i class="bi bi-images navicon"></i> SHIVA TECHHUB</a></li>
         <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
         <li class="dropdown"><a href="https://github.com/shivatechhub?tab=repositories"><i
               class="bi bi-menu-button navicon"></i> <span>GitHub</span> <i
