--- a/index.html
+++ b/index.html
@@ -447,23 +447,23 @@ Tips & tricks for building robust, scalable, and efficient infrastructures
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">App</li>
-            <li data-filter=".filter-product">Product</li>
-            <li data-filter=".filter-branding">Branding</li>
-            <li data-filter=".filter-books">Books</li>
+            <li data-filter=".filter-app">Java</li>
+            <li data-filter=".filter-product">Python</li>
+            <li data-filter=".filter-branding">linux</li>
+            <li data-filter=".filter-books">Terraform</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
+                <img src="images/java.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>App 1</h4>
+                  <h4>Java</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/app-1.jpg" title="App 1" data-gallery="portfolio-gallery-app"
+                  <a href="images/java.png" title="Java" data-gallery="portfolio-gallery-app"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                  <a href="https://youtu.be/Vu7-w4MTZ5o?si=POcsVWlzCmLjY8tK" title="Java Playlist" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
